<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_username"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_first_name"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textview_username"
                app:layout_constraintTop_toBottomOf="@+id/textview_username" />

            <TextView
                android:id="@+id/textview_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/label_last_name"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textview_firstname"
                app:layout_constraintStart_toEndOf="@+id/textview_firstname" />

            <TextView
                android:id="@+id/textview_label_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/label_request_to_follow"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textview_firstname"
                app:layout_constraintTop_toBottomOf="@+id/textview_firstname" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/button_request"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/textview_label_request"
                app:layout_constraintTop_toBottomOf="@+id/textview_label_request"
                app:layout_constraintWidth_max="400dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_username"
                    android:inputType="textPersonName"
                    android:scrollHorizontally="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_request"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/label_request"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/text_input_username"
                app:layout_constraintTop_toTopOf="@+id/text_input_username" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>